--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "electron": "^12.0.1"
   },
   "dependencies": {
-    "electron-reload": "^1.5.0"
+    "@electron/remote": "^2.0.1",
+    "axios": "^0.24.0",
+    "electron-reload": "^1.5.0",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.2.0",
+    "port-pid": "0.0.7",
+    "tree-kill": "^1.2.2"
   }
 }
