--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
 	},
 	"homepage": "https://github.com/Slad3/UniversalDirectoryVisualizer#readme",
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.4.0",
+		"@typescript-eslint/parser": "^5.4.0",
 		"electron": "^12.0.1",
-		"electron-builder": "^22.13.1"
+		"electron-builder": "^22.13.1",
+		"eslint": "^8.3.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.25.3"
 	},
 	"dependencies": {
 		"@electron/remote": "^2.0.1",
