--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,12 @@
             <version>20140107</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+<!--            <version>5.7.1</version>-->
+        </dependency>
+
 
     </dependencies>
 
