--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~11.2.14",
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1",
+    "highcharts": "^7.2.2",
+    "highcharts-angular": "^2.10.0",
     "install": "^0.13.0",
     "ngx-spinner": "^12.0.0",
     "rxjs": "~6.6.0",
